Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-8423

QFontDatabase symbols missing

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.6.3
    • 4.6.2
    • None
    • None
    • 15ecc59edab06a21fb7d724af13ca544decbc0eb, 3d3af93505f7b90e399aab4c8fa2bceae18fedf6

      These symbol is missing in the Qt Symbian port.

      static bool removeAllApplicationFonts();

      The functionality will be implemented as of task QTBUG-6611. The exports should however be added asap. (as of 4.6.3)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            portale Alessandro Portale
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes