Adding QFontDatabase::removeAllApplicationFonts()

It was missing and not covered by the standard autotests, so its
missing was not detected for quite some time.

Task-number: QTBUG-8423
Reviewed-By: Shane Kearns